# skeleton-cpp

./: CMakeLists.txt  README.md  reinit.bash  setver.bash
build_tools/: run_cmake.bash
demo_dep/: README.md
docs/: config
docs/html/: annotated.html  classDerivedClass-members.html  classDerivedClass.html  classDerivedClass__coll__graph.md5  classDerivedClass__inherit__graph.map  classes.html  compiling.html  contributing.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doc_8h.html  doc_8h_source.html  files.html  functions.html  functions_func.html  glowing__indexer_8cpp.html  glowing__indexer_8cpp__incl.map  glowing__indexer_8cpp__incl.md5  glowing__indexer_8h.html  glowing__indexer_8h__dep__incl.map  glowing__indexer_8h__dep__incl.md5  glowing__indexer_8h__incl.map  glowing__indexer_8h__incl.md5  glowing__indexer_8h_source.html  graph_legend.html  group__audio__tag.html  group__decoding__tag.html  group__file__tag.html  group__filters__tag.html  group__frames__tag.html  group__live__tag.html  group__livethread__tag.html  group__openglthread__tag.html  group__queues__tag.html  group__shmem__tag.html  group__some__tag.html  group__threading__tag.html  (+14 more)
docs/html/search/: all_1.js  all_2.js  all_5.js  classes_0.js  functions_0.js  groups_0.js  searchdata.js
include/: doc.h  glowing_indexer.h  template
src/: glowing_indexer.cpp  template
test/: test1.cpp  test2.cpp
